a few minor changes.